--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -1077,13 +1077,13 @@
                                                                                     id="scheduleLabel">{{'gis.quotation.motor_accessories'
                                                                                     | translate}}</label>
                                                                                 <div class="col-7">
-                                                                                    <select
-                                                                                        class="form-select form-control-sm mb-1"
-                                                                                        id="scheduleInput"
-                                                                                        formControlName="color">
-                                                                                        <option></option>
-                                                                                        <option></option>
-                                                                                    </select>
+                                                                                    <p-dropdown
+                                                                                        [options]="motorAccessoriesList"
+                                                                                        optionValue="type"
+                                                                                        optionLabel="desc"
+                                                                                        formControlName="color"
+                                                                                        [filterBy]="'desc'"
+                                                                                        [filter]="true"></p-dropdown>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -3570,13 +3570,14 @@
                                                         </tr>
                                                     </ng-template>
 
-                                                    
-                                                        <ng-template pTemplate="body" let-commissionTransaction let-ri="rowIndex">
-                                                            <tr [pSelectableRow]="commissionTransaction"
-                                                                [class.p-highlight]="commissionTransaction === selectedTransaction"
-                                                                (click)="addCommission(selectedTransaction)">
 
-                                                       
+                                                    <ng-template pTemplate="body" let-commissionTransaction
+                                                        let-ri="rowIndex">
+                                                        <tr [pSelectableRow]="commissionTransaction"
+                                                            [class.p-highlight]="commissionTransaction === selectedTransaction"
+                                                            (click)="addCommission(selectedTransaction)">
+
+
 
                                                             <td>{{commissionTransaction.transTypeDesc}} </td>
                                                             <td> {{commissionTransaction.transactionTypeCode}}</td>
@@ -3809,198 +3810,8 @@
                 <ng-container *ngIf="selectedItem === 3">
                     <!-- POLICY TAXES DETAILS -->
 
-                    <div class="card riskDetailsCards">
-                        <div class="card-body">
-                            <div class="row ">
-                                <div class="col-sm-3">
-                                    <p class="subheading"> Policy taxes</p>
-
-                                </div>
-
-                                <div class="col-sm-9 d-flex justify-content-end">
-                                    <div class="row  mb-2">
-
-
-                                        <div class="col-6">
-                                            <button class="btn btn-primary import-button"
-                                                (click)="populatePolicyTaxes()"
-                                                style="min-width: 141px;font-size:smaller;">Populate
-                                                taxes</button>
-                                        </div>
-                                        <div class="col-6">
-                                            <div class="row">
-                                                <div class="col-3">
-                                                    <button type="button" id="icon" class="btn btn-success"
-                                                        data-bs-toggle="modal" data-bs-target="#policyTaxes"
-                                                        title="add">
-                                                        <i class="fa-solid fa-plus"></i>
-                                                    </button>
-                                                </div>
-                                                <div class="col-3">
-                                                    <button type="button" id="icon" class="btn btn-primary"
-                                                        data-bs-toggle="modal" data-bs-target="#editThirdDetails"
-                                                        title="Edit">
-                                                        <i class="fa-solid fa-pencil"></i>
-                                                    </button>
-
-
-                                                </div>
-                                                <div class="col-3">
-                                                    <button type="button" id="icon" class="btn btn-primary"
-                                                        data-bs-toggle="modal" id="openModalTaxButtonDelete"
-                                                        [hidden]="true" data-bs-target="#deleteTax" title="Delete">
-                                                    </button>
-                                                    <button type="button" id="icon" class="btn btn-primary"
-                                                        title="Delete">
-                                                        <i class="fa-solid fa-trash-can"
-                                                            (click)="openPolicyTaxDeleteModal()"></i>
-                                                    </button>
-
-                                                </div>
-
-                                            </div>
-                                        </div>
-
-                                        <!-- <div class="col-1"></div> -->
-
-                                    </div>
-
-                                </div>
-                            </div>
-                            <p-table #dt1 [value]="filteredPolicyTaxes" dataKey="code" editMode="row"
-                                selectionMode="single" [(selection)]="selectedPolicyTax"
-                                [tableStyle]="{'min-width': '50rem'}" styleClass="p-datatable-sm"
-                                responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true">
-
-
-                                <ng-template pTemplate="header">
-                                    <tr>
-                                        <th class="flexible-header">Description</th>
-                                        <th class="flexible-header">Code</th>
-                                        <th class="flexible-header">Rate</th>
-                                        <th class="flexible-header">Amount </th>
-                                        <th class="flexible-header">Level code </th>
-                                        <th class="flexible-header">Rate type</th>
-                                        <th class="flexible-header">Type</th>
-                                        <th class="flexible-header">Policy level</th>
-                                        <th class="flexible-header">Category</th>
-
-                                    </tr>
-                                </ng-template>
-
-                                <ng-template pTemplate="body" let-filteredPolicyTaxes let-editing="editing"
-                                    let-ri="rowIndex">
-                                    <tr [pEditableRow]="filteredPolicyTaxes" [pSelectableRow]="filteredPolicyTaxes"
-                                        [class.p-highlight]="filteredPolicyTaxes === selectedPolicyTax">
-                                        <td>{{filteredPolicyTaxes.description}}</td>
-                                        <td></td>
-                                        <td>{{filteredPolicyTaxes.rate}}</td>
-                                        <td>{{filteredPolicyTaxes.amount}}</td>
-                                        <td></td>
-                                        <td>{{filteredPolicyTaxes.rateType}}</td>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-
-
-
-                                    </tr>
-                                </ng-template>
-                            </p-table>
-                            <!-- Add    Policy Taxes  Modal -->
-                            <div class="modal fade" id="policyTaxes" tabindex="-1" aria-labelledby="exampleModalLabel"
-                                aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-centered">
-                                    <div class="modal-content">
-
-                                        <div class="modal-body">
-                                            <button type="button" #closebutton class="float-end btn-close"
-                                                data-bs-dismiss="modal" aria-label="Close"></button>
-                                            <p class="text-start" id="selectClient">{{'gis.policy.select_client'
-                                                | translate}}
-                                            </p>
-
-                                            <p-table #dt1 [value]="clientData" [tableStyle]="{'max-width': '465px'}"
-                                                selectionMode="single" [resizableColumns]="true"
-                                                styleClass="p-datatable-sm" responsiveLayout="scroll"
-                                                class='ui-datatable' [autoLayout]="true" [paginator]="true" [rows]="5"
-                                                [scrollable]="true" scrollDirection="horizontal"
-                                                [showCurrentPageReport]="true"
-                                                currentPageReportTemplate=" {first} - {last} of {totalRecords}"
-                                                [globalFilterFields]="['idNumber', 'emailAddress','lastName','emailAddress']">
-                                                <ng-template pTemplate="caption">
-                                                    <div class="flex">
-                                                        <span class="p-input-icon-left ml-auto">
-                                                            <i class="pi pi-search search-icon"></i>
-                                                        </span>
-                                                        <input class="search-input" pInputText type="text"
-                                                            (input)="applyFilterGlobal($event, 'contains')"
-                                                            placeholder="Search" />
-
-                                                    </div>
-                                                </ng-template>
-                                                <ng-template pTemplate="header">
-
-                                                    <tr id="product">
-                                                        <th>Code</th>
-                                                        <th>Description</th>
-
-
-                                                    </tr>
-                                                </ng-template>
-
-                                                <ng-template let-clientData pTemplate="body">
-                                                    <tr id="productData" [pSelectableRow]=""
-                                                        (click)="loadClientDetails(clientData.id);">
-
-                                                        <td>
-                                                            {{clientData.idNumber}}
-                                                        </td>
-                                                        <td>
-                                                            {{clientData.firstName+" "+clientData.lastName}}
-                                                        </td>
-
-                                                    </tr>
-                                                </ng-template>
-
-                                            </p-table>
-                                            <br>
-                                            <!-- <button class="btn btn-primary float-end" data-bs-dismiss="modal" (click)="saveclient()">Save Details</button> -->
-                                        </div>
-
-
-
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Delete Policy Taxes Modal -->
-                            <div class="modal fade" id="deleteTax" tabindex="-1" role="dialog"
-                                aria-labelledby="deleteTax" aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-centered" role="document">
-                                    <div class="modal-content" id="deleteTax">
-                                        <div class="modal-body ">
-                                            <p class="deleteMessage mt-4 mb-4">
-                                                {{'gis.policy.are_you_sure_you_want_to_delete' | translate}}</p>
-                                            <div class="d-flex justify-content-center mb-3">
-                                                <button type="button" class="btn btn-primary px-5" id="delete"
-                                                    data-bs-dismiss="modal"
-                                                    (click)="deletePolicyTaxes()">{{'gis.policy.yes_delete' |
-                                                    translate}}</button>
-                                            </div>
-                                            <div class="d-flex justify-content-center mb-2">
-                                                <button type="button" class="btn btn-outline-primary px-5"
-                                                    data-bs-dismiss="modal">{{'gis.policy.no_im_not' |
-                                                    translate}}</button>
-                                            </div>
-
-
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    
+                    <app-policy-taxes></app-policy-taxes>
 
                 </ng-container>
                 <ng-container *ngIf="selectedItem === 4">
